# Turing_College

./: .gitignore  LICENSE  README.md  pyproject.toml
module_1/sprint_1/part_1/indoor/: README.md  indoor.py  readme.txt
module_1/sprint_1/part_6/: experiment.py
module_1/sprint_1/part_6/jusvyka-DS.v3.1.1.6/tests/: test_find_victim_basics.py  test_find_victim_multiple_distractions.py  test_update_board_baiscs.py  test_update_board_multiple_figures.py
module_1/sprint_1/part_6/project/: README.md
module_1/sprint_1/part_6/project/tests/: test_add_one_black_figure.py  test_possible_knight_victims.py  test_possible_rook_victims.py  test_update_board_where_figure_exist.py
module_1/sprint_1/part_6/public_repo/: chess.py
module_1/sprint_1/part_6/public_repo/tests/: test_find_victim_out_of_board.py
module_1/sprint_2/: scrap.py
module_1/sprint_2/part_4/matrix_script/: decoding_matrix.py  quick_solution.py
module_1/sprint_2/part_4/matrix_script/tests/: test_decode.py  test_find_begining.py  test_matrix_to_string.py
module_1/sprint_2/part_4/piling_up/: piling_up.py  scrap.py
module_1/sprint_2/part_4/piling_up/tests/: test_piling_up.py  (+1 more)
module_1/sprint_2/part_4/validating_UID/: validating_uid.py
module_1/sprint_3/part_1/: Introduction to Data Science in Python - Soccer Data Analysis.ipynb  customplot.py  scrap.py
module_1/sprint_3/part_1/pydata_book/: ch02.ipynb  ch04.ipynb  scrap.ipynb
module_1/sprint_3/part_2/: scrap.py
module_1/sprint_4/part_2/: sort_with_operator.py
module_1/sprint_4/part_3/: angry_proffesor.py  plotly_tutorial.ipynb
(+4 files in other folders)
